Add first recipe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/takoyaki.html">Takoyaki</a>
-  </body>
+    <h1>Japanese Cooking!</h1>
+    <ul>
+      <li><a href="../odin-recipes/recipes/takoyaki.html">Takoyaki</a></li>
+    </ul>
+
+    <img src="./images/Jcooking.jpg" alt="Japanese Cooking" /> 
 </html>
