--- a/recipes/takoyaki.html
+++ b/recipes/takoyaki.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Takoyaki</title>
   </head>
   <body>
     <h1>Takoyaki</h1>
+    <img src="../images/takoyaki.jpeg" alt="takoyaki" />
+    <h2>What is Takoyaki</h2>
+    <p>
+      Takoyaki, or Grilled Octopus Balls, are one of Japan’s best-known street
+      food that originated in Osaka. Whether you make a traditional style with
+      bits of octopus or other alternatives, these ball-shaped dumplings are fun
+      to make with your friends and family!
+    </p>
+    <h2>Inredients</h2>
+    <p>Batter:</p>
+    <ul>
+      <li>200g flour</li>
+      <li>2 eggs</li>
+      <li>450ml water</li>
+      <li>pinch of dashi stock powder</li>
+    </ul>
+    <p>Fillings:</p>
+    <ul>
+      <li>100g fresh boiled octopus, chopped</li>
+      <li>1 bunch spring onion, chopped</li>
+      <li>red pickled ginger</li>
+      <li>tempura flakes</li>
+    </ul>
+    <p>Toppings:</p>
+    <ul>
+      <li>takoyaki sauce</li>
+      <li>japanese mayonnaise</li>
+      <li>aosa powdered seaweed (or aonori)</li>
+      <li>katsuobushi bonito flakes</li>
+    </ul>
+
+    <h2>How to prepare</h2>
+    <ol>
+      <li>
+        Start by creating the batter. Grab a large bowl and mix together 2 eggs,
+        200g of flour, 450ml of water and a little dashi stock. Set this aside.
+        If you have the ready-made okonomiyaki flour, follow the directions for
+        making the batter and you’re good to go.
+      </li>
+
+      <li>
+        Place your takoyaki plate on the gas stove on medium heat and heat up a
+        small amount of oil in each hole.
+      </li>
+      <li>
+        Cut up your octopus into small pieces. Place a piece of octopus in each
+        of the semi-circular holes, and then fill up each hole to the top with
+        the batter mix. You can even overflow the batter out of the hole to make
+        it easier to flip them later.
+      </li>
+      <li>
+        Now you can add the chopped spring onion, red pickled ginger and tempura
+        flakes to each hole. The amount you add is up to you, but only a small
+        amount of each will give enough flavour.
+      </li>
+      <li>
+        Once the takoyaki are about half cooked, about 1-2 minutes, you will
+        need to flip them over. The best way to do this is to use a small wooden
+        skewer to poke the outside of the batter and flip it over within the
+        hole. This takes a bit of practice to get done smoothly so keep trying
+        if you are making a mess.
+      </li>
+      <li>
+        You can usually only flip each takoyaki about three quarters of the way
+        round so allow it to cook a little more before flipping it again. By
+        now, all your takoyaki should be round so keep rotating them in the
+        holes to make sure that they cook evenly on all sides. This will take
+        about 3-4 minutes until golden brown on the outside.
+      </li>
+      <li>
+        Place a few takoyaki on a plate and smother them with loads of takoyaki
+        sauce and Japanese mayonnaise. Then sprinkle a bit of powdered seaweed
+        and some bonito flakes on top and enjoy. Allow to cool slightly and
+        enjoy hot.
+      </li>
+    </ol>
   </body>
 </html>
